--- a/starter_files/characters.html
+++ b/starter_files/characters.html
@@ -20,28 +20,34 @@
 
 
 
-    <h2>Characters</h2>
+    <h3>Characters</h3>
 
 
-      <li><b>Star Butterfly</b></li>
-      
+      <b><li>Star Butterfly</li></b>
 
-    <p>Princess Star Butterfly is the main protagonist of Star vs. the Forces of Evil. She is a teenage princess of the kingdom of Mewni (located in another dimension) sent to Earth by her parents in order to learn how to use the royal magic wand.
 
-    <p>Star has two main motivations:</p>
+    <blockquote class="starButterfly">
+      <p>Princess Star Butterfly is the main protagonist of Star vs. the Forces of Evil. She is a teenage princess of the kingdom of Mewni (located in another dimension) sent to Earth by her parents in order to learn how to use the royal magic wand.
 
-    <ol>
-      <li>Learning to control her wand</li>
-      <li>Keeping the wand out of the wrong hands</li>
-    </ol>
+      <p>Star has two main motivations:</p>
 
-    <li><b>Marco Diaz</b></li>
-    <p>Marco is Star's best friend. He is kind, responsible, very organized, and supportive of others. He has a reputation at his school for being the "safe kid" due to avoiding danger and being cautious, though he insists that he is a "misunderstood bad boy".</p>
+        <ol>
+          <li>Learning to control her wand</li>
+          <li>Keeping the wand out of the wrong hands</li>
+        </ol>
 
-    <li><b>Ludo</b></li>
-    <br>
+    </blockquote>
 
-    <p>Ludo is a major antagonist of Star vs. the Forces of Evil. In season 1, he uses an army of monsters in order to steal Star's wand and take over the universe. As of season 2, however, he has his own wand and new monster followers. Toward the end of season 2, his body is possessed by Toffee.</p>
+    <blockquote class="marcoDiaz">
+      <li><b>Marco Diaz</b></li>
+        <p>Marco is Star's best friend. He is kind, responsible, very organized, and supportive of others. He has a reputation at his school for being the "safe kid" due to avoiding danger and being cautious, though he insists that he is a "misunderstood bad boy".</p>
+      </blockquote>
+      <blockquote>
+      <li><b>Ludo</b></li>
+        <p>Ludo is a major antagonist of Star vs. the Forces of Evil. In season 1, he uses an army of monsters in order to steal Star's wand and take over the universe. As of season 2, however, he has his own wand and new monster followers. Toward the end of season 2, his body is possessed by Toffee.</p>
+
+    </blockquote>
+
 <footer>
     <hr>
         <nav class="mainNav">
